--- a/index.html
+++ b/index.html
@@ -170,11 +170,12 @@
         <div class="hero-layout">
             <div class="hero-text">
                 <span class="sans small-caps" style="color: var(--accent-clay); font-weight: 600;">Identidad Viva</span>
-                <h1>Aldoh Saúl<br>Flores García</h1>
-                <p class="sans" style="font-size: 1rem; margin-top: 1rem;">
-                    Ingeniero Industrial · Escritor · Estratega · Buscador
+                <h1>Aldo<span style="color: var(--accent-clay);">h</span> Saúl<br>Flores García</h1>
+                <p class="sans" style="font-size: 0.9rem; margin-top: 1rem; letter-spacing: 1px; font-weight: 600;">
+                    INGENIERO INDUSTRIAL · ESCRITOR (DITOOH) · TEÓLOGO · PUGNO [cite: 3, 8]
                 </p>
                 <div class="hero-quote">
+                    “Aldoh Saúl, el que nunca se queda quieto.”
                     “Busco la arquitectura lógica de la realidad a través de la ingeniería, y la esencia del ser a través de la palabra.”
                 </div>
             </div>
@@ -330,3 +331,4 @@
 
 </body>
 </html>
+
